--- a/HTML/index.html
+++ b/HTML/index.html
@@ -191,7 +191,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script src="../JS/response.js"></script>
+    <!-- <script src="../JS/response.js"></script> -->
     <script src="../JS/main.js"></script>
   </body>
 </html>
