finished the code of checkboxes

--- a/HTML/API.html
+++ b/HTML/API.html
@@ -104,13 +104,13 @@
     <!-- CHECKBOXES -->
     <div class="checkboxes">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkMustache">
+        <input class="form-check-input" type="checkbox" value="mustache" id="checkMustache">
         <label class="form-check-label" for="flexCheckDefault">
           Mustache
         </label>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="checkHat">
+        <input class="form-check-input" type="checkbox" value="hat" id="checkHat">
         <label class="form-check-label" for="flexCheckDefault">
           Hat
         </label>
