finsihed footer, erased files, insert media query

--- a/HTML/Images.html
+++ b/HTML/Images.html
@@ -86,15 +86,22 @@
       </div>
     </nav>
 
-    <!-- Welcome Picture -->
-    <div class="text-center">
+    <!-- Welcome Picture ------------------------------------------------------------- -->
+    <div class="welcomePeach">
+      <img
+      src="../Images/speechbubble.png"
+      class="rounded"
+      alt="marioWelcome"
+      width="20%"
+      height="20%"
+      />
+      <div class="push">
       <img
         src="../Images/peach3.png"
-        class="rounded"
+        class="rounded fix"
         alt="marioWelcome"
-        width="20%"
-        height="20%"
       />
+      </div>
     </div>
     <!-- Search Form -->
 
