--- a/HTML/API.html
+++ b/HTML/API.html
@@ -11,10 +11,27 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../CSS/API.css" />
 </head>
 <body>
-<!-- NAVIGATION BAR -->
+<!-- AUDIO AND BOWSER PAINTING---------------------------------------------------------------- -->
+<audio id="bowserAudio">
+  <source src="../bowser.wav" type="audio/wav">
+</audio>
+
+<div class="centering">
+  <div id="popUpBowser" class="popUpBowser">
+    <div class="coin-box-rivet1"><br /></div>
+    <div class="coin-box-rivet2"><br /></div>
+    <div class="coin-box-rivet3"><br /></div>
+    <div class="coin-box-rivet4"><br /></div>
+    <h3>The programmer was too lazy to code something when you click on those rows!</h3>
+    <img src="../Images/bowserPainting.webp" alt="bowserPainting" class="bowserPainting">
+  </div>
+</div>
+
+<!-- NAVIGATION BAR------------------------------------------------------------------------------ -->
 <nav class="navbar sticky-top bg-light">
     <div class="container-fluid">
       <a href="https://mario-kart-tour-api.herokuapp.com/"
@@ -87,21 +104,19 @@
   <div class="text-center">
     <img
       src="../Images/marioWelcome.png"
-      class="rounded"
+      class="rounded marioWelcome"
       alt="marioWelcome"
-      width="10%"
-      height="15%"
     />
   </div>
-  <!-- SEARCH FORM -->
+  <!-- SEARCH FORM------------------------------------------------------------------------------- -->
 
   <form class="searchForm">
     <div class="coin-box-rivet1"><br /></div>
     <div class="coin-box-rivet2"><br /></div>
     <div class="coin-box-rivet3"><br /></div>
     <div class="coin-box-rivet4"><br /></div>
-    <!-- SEARCH FORM -->
-    <!-- CHECKBOXES -->
+    <!-- SEARCH FORM----------------------------------------------------------------------------- -->
+    <!-- CHECKBOXES------------------------------------------------------------------------------ -->
     <div class="title-show-drivers">
       <h3>Show me the following drivers that have...</h3>
     </div>
@@ -131,7 +146,7 @@
         </label>
       </div>
     </div>
-<!-- SEARCH BAR---------------------------------------------------------- -->
+<!-- SEARCH BAR------------------------------------------------------------------------- -->
     <div class="input-group">
       <input
         type="text"
@@ -158,24 +173,24 @@
         <option selected>Sort by</option>
         <option value="a-z">A - Z</option>
         <option value="z-a">Z - A</option>
-        <option value="rare">Rarest Driver</option>
+        <option value="rare" class="hiding">Rarest Driver First</option>
       </select>
     </div>
   </form>
-<!-- TABLE----------------------------------------------------------------- -->
-<table class="table" id="emptyTable">
+<!-- TABLE------------------------------------------------------------------------------------- -->
+<table id="emptyTable">
   <thead id="thread">
     <tr>
       <th scope="col"></th>
       <th scope="col">Driver</th>
       <th scope="col">Debut Game</th>
-      <th scope="col">Rarity</th>
+      <th scope="col" class="hiding">Rarity</th>
       <th scope="col">Special Skill</th>
     </tr>
   </thead>
   <tbody id="bodyTable"></tbody>
 </table>
-<!-- WAITING PIC FOR TABLE------------------------------------------------- -->
+<!-- WAITING PIC FOR TABLE------------------------------------------------------------------ -->
 <div id="LakituDiv">
   <div class="coin-box-rivet1"><br /></div>
   <div class="coin-box-rivet2"><br /></div>
@@ -186,7 +201,12 @@
 
 <!-- FOOTER---------------------------------------------------------------- -->
 <footer class="footer-container">
-
+  <div class="icons">
+    <i class="bi bi-facebook"></i>
+    <i class="bi bi-twitter"></i>
+    <i class="bi bi-instagram"></i>
+  </div>
+  <p>Sarah Manicke © 2022</p>
 </footer>
 <!-- SCRIPT---------------------------------------------------------------- -->
 <script
