--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../CSS/style.css" />
   </head>
 
@@ -85,12 +86,12 @@
         <a class="navbar-brand" href="#">Mario Kart Tour Drivers</a>
       </div>
     </nav>
-    <!-- START OF THE PICTURES -->
+    <!-- START OF THE PICTURES--------------------------------------------------- -->
     <div
       id="carouselExampleIndicators"
       class="carousel slide"
       data-bs-ride="true"
-    >
+      >
       <div class="carousel-indicators">
         <button
           type="button"
@@ -185,7 +186,16 @@
         </p>
       </div>
     </div>
-
+<!-- FOOTER---------------------------------------------------------------- -->
+<footer class="footer-container">
+  <div class="icons">
+    <i class="bi bi-facebook"></i>
+    <i class="bi bi-twitter"></i>
+    <i class="bi bi-instagram"></i>
+  </div>
+  <p>Sarah Manicke © 2022</p>
+</footer>
+<!-- SCRIPT---------------------------------------------------------------- -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
