--- a/HTML/Images.html
+++ b/HTML/Images.html
@@ -88,43 +88,33 @@
 
     <!-- Welcome Picture ------------------------------------------------------------- -->
     <div class="welcomePeach">
-      <img
-      src="../Images/speechbubble.png"
-      class="rounded"
-      alt="marioWelcome"
-      width="20%"
-      height="20%"
-      />
-      <div class="push">
+   
       <img
         src="../Images/peach3.png"
         class="rounded fix"
         alt="marioWelcome"
       />
-      </div>
+      
     </div>
     <!-- Search Form -->
 
     <!-- Cards -->
+<div class="cardHolder" id="cardHolder"></div>
 
-    <div class="card" style="width: 18rem">
-      <img src="../Images/marioWelcome.png" class="card-img-top" alt="mario" />
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
+<!-- MARIO CSS ANIMATION DRIVER ------------------------------------------------------------- -->
 
+<div class="cssBox" id="cssAnimation">
+  <p>This is still under construction!</p>
+  <img src="../Images/marioDriver.png" alt="MarioDriver" class="marioDriverSize">
+</div>
+
+<!-- Script ------------------------------------------------------------- -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <script src="../JS/response.js"></script>
+    <!-- <script src="../JS/response.js"></script> -->
     <script src="../JS/additional.js"></script>
     <script src="../JS/Images.js"></script>
   </body>
