change to local API, API isnt available anymore

--- a/HTML/API.html
+++ b/HTML/API.html
@@ -221,6 +221,7 @@
       crossorigin="anonymous">
 </script>
 <script src="../JS/additional.js"></script>
+<script src="../JS/response.js"></script>
 <script src="../JS/API.js"></script>
 </body>
 </html>
