--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
 
   <body>
@@ -22,7 +22,7 @@
       <div class="container-fluid">
         <a href="https://mario-kart-tour-api.herokuapp.com/"
           ><img
-            src="../Images/nintendo.svg.png"
+            src="./Images/nintendo.svg.png"
             alt="nintendo-logo"
             width="90"
             height="35"
@@ -54,7 +54,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="API.html">Drivers</a>
+                  <a class="nav-link" href="./HTML/API.html">Drivers</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Images.html">Images</a>
@@ -202,6 +202,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- <script src="../JS/response.js"></script> -->
-    <script src="../JS/main.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
