--- a/HTML/Images.html
+++ b/HTML/Images.html
@@ -48,7 +48,7 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="index.html"
+                    href="../index.html"
                     >Home</a
                   >
                 </li>
@@ -116,6 +116,7 @@
     ></script>
     <!-- <script src="../JS/response.js"></script> -->
     <script src="../JS/additional.js"></script>
+    <script src="../JS/response.js"></script>
     <script src="../JS/Images.js"></script>
   </body>
 </html>
