--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <a class="nav-link" href="./HTML/API.html">Drivers</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Images.html">Images</a>
+                  <a class="nav-link" href="./HTML/Images.html">Images</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
